--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <script src="./src/main.js"></script>
   <script src="./src/Game.js"></script>
   <script src="./src/Player.js"></script>
+  <script src="./src/Enemy.js"></script>
 </body>
 </html>
