--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
   <script src="./src/Game.js"></script>
   <script src="./src/Player.js"></script>
   <script src="./src/Enemy.js"></script>
+  <script src="./src/Projectiles.js"></script>
 </body>
 </html>
